Fixed spacing issue with more events link in groups

--- a/scss/_group.scss
+++ b/scss/_group.scss
@@ -669,6 +669,10 @@
         margin-bottom: 24px;
         display: inline-block;
 
+        svg {
+            margin-left: 4px;
+        }
+
         @include desktop-and-up {
             margin-bottom: 32px;
         }
